--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail-generic/iot-device-detail-generic.component.html
@@ -4,13 +4,7 @@
             <h3>{{ 'IOTDEVICE.DETAIL' | translate }}</h3>
             <!-- Battery -->
             <p class="mr-1"><strong>{{ 'IOT-TABLE.APPLICATION' | translate }}</strong>{{device.application.name}}</p>
-            <p><strong>{{ 'IOTDEVICE.CREATED' | translate }}</strong>{{device.createdAt | dkTime}}<span
-                    *ngIf="device.createdByName">{{device.createdByName | createdUpdatedBy}}</span></p>
-            <p *ngIf="device.createdAt !== device.updatedAt">
-                <strong>{{ 'IOTDEVICE.UPDATED' | translate }}</strong>{{device.updatedAt | dkTime}}
-                <span *ngIf="device.updatedByName">
-                    {{device.updatedByName | createdUpdatedBy}} </span>
-            </p>
+            <app-general-details [data]="device"></app-general-details>
             <mat-divider></mat-divider>
             <div class="d-flex align-items-center">
                 <p class="mr-1"><strong>{{ 'IOT-TABLE.BATTERY' | translate }}</strong></p>
