--- a/src/app/admin/permission/permission-detail/permission-detail.component.html
+++ b/src/app/admin/permission/permission-detail/permission-detail.component.html
@@ -7,12 +7,7 @@
             <div class="col-12">
                 <div class=" jumbotron">
                     <h3>{{'PERMISSION.DETAIL.HEADLINE' | translate}}</h3>
-                    <p><strong>{{ 'PERMISSION.DETAIL.CREATED' | translate }}</strong>{{permission.createdAt | dkTime}}<span
-                            *ngIf="permission.createdByName">{{permission.createdByName | createdUpdatedBy}}</span></p>
-                    <p *ngIf="permission.createdAt !== permission.updatedAt">
-                        <strong>{{ 'PERMISSION.DETAIL.UPDATED' | translate }}</strong>{{permission.updatedAt | dkTime}}
-                        <span *ngIf="permission.updatedByName">
-                            {{permission.updatedByName | createdUpdatedBy}} </span></p>
+                    <app-general-details [data]="permission"></app-general-details>
                     <p><strong>{{'PERMISSION.DETAIL.TYPE' | translate}}</strong>{{permission.type}}</p>
                     <p><strong>{{'PERMISSION.DETAIL.ORG' | translate}}</strong>
                         {{permission.organization?.name}}
