--- a/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
@@ -1,17 +1,11 @@
 <app-form-header [backButton]="backButton" [title]="title">
 </app-form-header>
-<div *ngIf="deviceProfileData" class="jumbotron os2-form mt-3 px-md-5 py-md-4">
+<div *ngIf="deviceProfile" class="jumbotron os2-form mt-3 px-md-5 py-md-4">
     <h3>{{ 'PROFILES.DEVICE_PROFILE.DETAILS' | translate }}</h3>
-    <p><strong>{{ 'PROFILES.DEVICE_PROFILE.CREATED' | translate }}</strong>{{deviceProfileData.createdAt | dkTime}}<span
-            *ngIf="deviceProfileData.createdByName">{{deviceProfileData.createdByName | createdUpdatedBy}}</span>
-    </p>
-    <p *ngIf="deviceProfileData.createdAt !== deviceProfileData.updatedAt">
-        <strong>{{ 'PROFILES.DEVICE_PROFILE.UPDATED' | translate }}</strong>{{deviceProfileData.updatedAt | dkTime}}
-        <span *ngIf="deviceProfileData.updatedByName">{{deviceProfileData.updatedByName | createdUpdatedBy}}</span>
-    </p>
     <p><strong
             *ngIf="deviceProfile.internalOrganizationName">{{ 'PROFILES.DEVICE_PROFILE.ORGANIZATION' | translate }}</strong>{{deviceProfile.internalOrganizationName}}
     </p>
+    <app-general-details [data]="deviceProfile"></app-general-details>
 </div>
 <form (ngSubmit)="onSubmit()" class="os2-form mt-3 px-md-5 py-md-4">
     <div *ngIf="errorMessages" class="error-messages p-3">
