IOT-1058: Fix pagination on organisation table

--- a/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
+++ b/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
@@ -28,7 +28,7 @@
                     <h3>
                         {{ 'ORGANISATION.DETAIL.PERMISSIONS' | translate }}
                     </h3>
-                    <app-permission-tabel [organisationId]="organisation.id">
+                    <app-permission-tabel [organisationId]="id">
                     </app-permission-tabel>
                 </div>
             </div>
