--- a/src/app/admin/users/user-list/user-table/user-table.component.html
+++ b/src/app/admin/users/user-list/user-table/user-table.component.html
@@ -50,7 +50,7 @@
                 {{ 'USERS.LOGIN' | translate }}</th>
             <td mat-cell *matCellDef="let element">
                 <div *ngIf="element.lastLogin; else noLogin">
-                    <P> {{element.lastLogin | date}}</P>
+                    <P> {{element.lastLogin | tableDatePipe}}</P>
                 </div>
                 <ng-template #noLogin>
                     <P>Ikke logget på endnu</P>
