--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -6,10 +6,10 @@
                     <div class="error-page__text-box">
                         <h1 class="error-page-primary mb-5">
                             <span class="error-page-primary--main">
-                                {{errorMessage.code}}
+                                {{errorMessage.code | translate}}
                             </span>
                             <span class="error-page-primary--sub">
-                                {{errorMessage.message}}
+                                {{errorMessage.message | translate}}
                             </span>
                         </h1>
                     </div>
