--- a/src/app/profiles/service-profiles/service-profiles-edit/service-profiles-edit.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-edit/service-profiles-edit.component.html
@@ -14,10 +14,10 @@
     <div *ngIf="errorMessages" class="error-messages p-3">
         <ul class="mb-0">
             <li *ngFor="let error of errorMessages">
-                {{error}}
+                {{error | translate}}
             </li>
             <li *ngIf="errorMessage">
-                {{errorMessage}}
+                {{errorMessage | translate}}
             </li>
         </ul>
     </div>
