--- a/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
@@ -4,7 +4,7 @@
         <ul class="mb-0">
             <div *ngIf="errorMessages">
                 <li *ngFor="let error of errorMessages">
-                    {{error}}
+                    {{error | translate}}
                 </li>
             </div>
         </ul>
