IOT-1048: Handle errors of deletion of Sigfox devices

--- a/src/app/applications/application-detail/application-detail.component.html
+++ b/src/app/applications/application-detail/application-detail.component.html
@@ -5,6 +5,9 @@
   </app-top-bar>
   <div class="container-fluid">
     <div class="row">
+      <div *ngIf="errorMessage" class="error-messages col-8 p-3 mx-4 my-3">
+        {{errorMessage | translate}}
+      </div>
       <div class="col-12">
         <div class="jumbotron">
           <h3>Detaljer</h3>
