--- a/src/app/applications/datatarget/datatarget-edit/datatarget-edit.component.html
+++ b/src/app/applications/datatarget/datatarget-edit/datatarget-edit.component.html
@@ -133,7 +133,7 @@
           </ng-container>    
         </div>
       <div class="form-group mt-5">
-          <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
+          <button (click)="routeToDatatargets()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
           <button [disabled]="disableSaveButton()" class="btn btn-primary ml-2" type="submit">{{ submitButton }}</button>
         </div>
   </form>
