--- a/src/app/gateway/gateway-edit/gateway-edit.component.html
+++ b/src/app/gateway/gateway-edit/gateway-edit.component.html
@@ -51,7 +51,7 @@
         <input type="number" class="form-control" id="location.latitude" name="location.latitude" [placeholder]="00"
           required [(ngModel)]="gateway.location.latitude" step=".000001" min="-180" max="180" maxlength="9"
           (keyup)="onCoordinateKey($event)"
-          [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('longitude'), 'is-valid' : formFailedSubmit && !errorFields.includes('longitude')}">
+          [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('latitude'), 'is-valid' : formFailedSubmit && !errorFields.includes('latitude')}">
       </div>
 
       <div class="form-group mt-3 col-6">
@@ -59,7 +59,7 @@
         <input type="number" class="form-control" id="altitude" name="altitude" [placeholder]="00" required
           [(ngModel)]="gateway.location.altitude" step=".000001" min="-180" max="180" maxlength="9"
           (keyup)="onCoordinateKey($event)"
-          [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('longitude'), 'is-valid' : formFailedSubmit && !errorFields.includes('longitude')}">
+          [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('altitude'), 'is-valid' : formFailedSubmit && !errorFields.includes('altitude')}">
       </div>
     </div>
     <div class="form-group mt-3">
