--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -11,7 +11,8 @@
                     <app-general-details [data]="gateway"></app-general-details>
                     <p><strong>{{ 'GATEWAY.TAGS' | translate }}</strong>{{gateway.tagsString}}</p>
                     <p *ngIf="gateway.description">
-                        <strong>{{ 'GATEWAY.DESCRIPTION' | translate }}</strong>{{gateway.description}}</p>
+                        <strong>{{ 'GATEWAY.DESCRIPTION' | translate }}</strong></p>
+                    <pre><p>{{gateway.description}}</p></pre>
                 </div>
             </div>
             <div class="col-md-6 d-flex align-items-stretch">
