IOT-1068: IoT Device table pagination

--- a/src/app/applications/application-detail/application-detail.component.html
+++ b/src/app/applications/application-detail/application-detail.component.html
@@ -25,7 +25,7 @@
             [ctaLabelPrimary]="'FORM.CREATE-NEW-IOT-DEVICE' | translate" [ctaRouterLinkPrimary]="'new-iot-device'"
             [ctaLabelSecondary]="'APPLICATION.IMPORT-CSV' | translate" [ctaRouterLinkSecondary]="'bulk-import'">
           </app-top-bar-table>
-          <app-iot-devices-table [application]="application"></app-iot-devices-table>
+          <app-iot-devices-table [applicationId]="id"></app-iot-devices-table>
         </div>
       </div>
     </div>
