--- a/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
+++ b/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
@@ -1,85 +1,82 @@
-<app-loading-spinner *ngIf="isLoadingResults; else showTable">
+<app-loading-spinner *ngIf="isLoadingResults">
 </app-loading-spinner>
-<ng-template #showTable>
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="data" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-sort-header="name" *matHeaderCellDef mat-header-cell>
-          {{ 'APPLICATION-TABLE.NAME' | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">
-          <a [routerLink]="['iot-device', element.id]" routerLinkActive="active"
-            class="device-link">{{element.name}}</a>
-        </td>
-      </ng-container>
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-sort-header="name" *matHeaderCellDef mat-header-cell>
+        {{ 'APPLICATION-TABLE.NAME' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <a [routerLink]="['iot-device', element.id]" routerLinkActive="active" class="device-link">{{element.name}}</a>
+      </td>
+    </ng-container>
 
-      <!-- Technology Column -->
-      <ng-container matColumnDef="technology">
-        <th mat-header-cell *matHeaderCellDef>{{ 'IOT-TABLE.NETWORK-TECHNOLOGY' | translate }}</th>
-        <td mat-cell *matCellDef="let element">{{"IOT-DEVICE-TYPES." + element.type | translate}}</td>
-      </ng-container>
+    <!-- Technology Column -->
+    <ng-container matColumnDef="technology">
+      <th mat-header-cell *matHeaderCellDef>{{ 'IOT-TABLE.NETWORK-TECHNOLOGY' | translate }}</th>
+      <td mat-cell *matCellDef="let element">{{"IOT-DEVICE-TYPES." + element.type | translate}}</td>
+    </ng-container>
 
-      <!-- Alarm Column -->
-      <ng-container matColumnDef="alarm">
-        <th mat-header-cell *matHeaderCellDef>{{ 'IOT-TABLE.ALARM' | translate }}</th>
-        <td mat-cell *matCellDef="let element">
-          N/A
-        </td>
-      </ng-container>
+    <!-- Alarm Column -->
+    <ng-container matColumnDef="alarm">
+      <th mat-header-cell *matHeaderCellDef>{{ 'IOT-TABLE.ALARM' | translate }}</th>
+      <td mat-cell *matCellDef="let element">
+        N/A
+      </td>
+    </ng-container>
 
-      <!-- Battery Column -->
-      <ng-container matColumnDef="battery">
-        <th mat-sort-header="battery" *matHeaderCellDef mat-header-cell>
-          {{ 'IOT-TABLE.BATTERY' | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">
-          <div *ngIf="element.type === 'LORAWAN'; else noBatteryStatus">
-            <app-batteri-status [color]="batteryStatusColor" [percentage]="getBatteryProcentage(element)">
-            </app-batteri-status>
+    <!-- Battery Column -->
+    <ng-container matColumnDef="battery">
+      <th *matHeaderCellDef mat-header-cell>
+        {{ 'IOT-TABLE.BATTERY' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">
+        <div *ngIf="element.type === 'LORAWAN'; else noBatteryStatus">
+          <app-batteri-status [color]="batteryStatusColor" [percentage]="getBatteryProcentage(element)">
+          </app-batteri-status>
+        </div>
+        <ng-template #noBatteryStatus>
+          <div>
+            {{ 'IOTDEVICE-TABLE-ROW.BATTERY-ERROR-MESSAGE' | translate }}
           </div>
-          <ng-template #noBatteryStatus>
-            <div>
-              {{ 'IOTDEVICE-TABLE-ROW.BATTERY-ERROR-MESSAGE' | translate }}
-            </div>
-          </ng-template>
-        </td>
-      </ng-container>
+        </ng-template>
+      </td>
+    </ng-container>
 
-      <!-- Active Column -->
-      <ng-container matColumnDef="active">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header="active">
-          {{ 'IOT-TABLE.ACTIVE' | translate }}
-        </th>
-        <td mat-cell *matCellDef="let element">{{lastActive(element)}}</td>
-      </ng-container>
+    <!-- Active Column -->
+    <ng-container matColumnDef="active">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header="active">
+        {{ 'IOT-TABLE.ACTIVE' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let element">{{lastActive(element)}}</td>
+    </ng-container>
 
-      <ng-container matColumnDef="menu">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element">
-          <div class="dropdown ">
-            <a href="#" role="button" id="tableRowDropdown-{{element.id}}" class="applicationRow__edit dropdown-toggle"
-              data-toggle="dropdown" aria-expanded="false"
-              [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-            <ul class="dropdown-menu dropdown-menu--table" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
-              <li class="dropdown-item">
-                <a [routerLink]="['iot-device-edit', element.id]"
-                  routerLinkActive="active">{{ 'IOTDEVICE-TABLE-ROW.EDIT' | translate }}
-                </a>
-              </li>
-              <li class="dropdown-item">
-                <a (click)="clickDelete(element)" [routerLink]="">{{ 'IOTDEVICE-TABLE-ROW.DELETE' | translate }}</a>
-              </li>
-            </ul>
-          </div>
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="menu">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <div class="dropdown ">
+          <a href="#" role="button" id="tableRowDropdown-{{element.id}}" class="applicationRow__edit dropdown-toggle"
+            data-toggle="dropdown" aria-expanded="false"
+            [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+          <ul class="dropdown-menu dropdown-menu--table" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
+            <li class="dropdown-item">
+              <a [routerLink]="['iot-device-edit', element.id]"
+                routerLinkActive="active">{{ 'IOTDEVICE-TABLE-ROW.EDIT' | translate }}
+              </a>
+            </li>
+            <li class="dropdown-item">
+              <a (click)="clickDelete(element)" [routerLink]="">{{ 'IOTDEVICE-TABLE-ROW.DELETE' | translate }}</a>
+            </li>
+          </ul>
+        </div>
+      </td>
+    </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
-    </mat-paginator>
-  </div>
-</ng-template>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
+  </mat-paginator>
+</div>
