--- a/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
+++ b/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
@@ -16,6 +16,17 @@
 <div class="row mb-2">
     <div class="form-group mt-3 col-12">
         <label class="form-label"
+            for="description">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-DESCRIPTION' | translate}}*</label>
+        <input type="text" class="form-control" id="description" name="description"
+            [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-DESCRIPTION-PLACEHOLDER' | translate" required
+            [(ngModel)]="openDataDk.description"
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('description'), 'is-valid' : formFailedSubmit && !errorFields.includes('description')}">
+    </div>
+</div>
+
+<div class="row mb-2">
+    <div class="form-group mt-3 col-12">
+        <label class="form-label"
             for="description">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-AUTHORNAME' | translate}}</label>*
         <input type="text" class="form-control" id="authorName" name="authorName"
             [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-AUTHORNAME-PLACEHOLDER' | translate" required
@@ -38,33 +49,22 @@
 <div class="row mb-2">
     <div class="form-group mt-3 col-12">
         <label class="form-label"
-            for="title">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-RESOURCETITLE' | translate}}</label>
-        <input type="text" class="form-control" id="resourceTitle" ame="resourceTitle"
-            [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-RESOURCETITLE-PLACEHOLDER' | translate" maxlength="120"
-            required [(ngModel)]="openDataDk.resourceTitle"
-            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('resourceTitle'), 'is-valid' : formFailedSubmit && !errorFields.includes('resourceTitle')}">
-    </div>
-</div>
-
-<div class="row mb-2">
-    <div class="form-group mt-3 col-12">
-        <label class="form-label"
-            for="description">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-DESCRIPTION' | translate}}</label>
-        <input type="text" class="form-control" id="description" name="description"
-            [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-DESCRIPTION-PLACEHOLDER' | translate" required
-            [(ngModel)]="openDataDk.description"
-            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('description'), 'is-valid' : formFailedSubmit && !errorFields.includes('description')}">
-    </div>
-</div>
-
-<div class="row mb-2">
-    <div class="form-group mt-3 col-12">
-        <label class="form-label"
             for="description">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-KEYWORDS' | translate}}</label>
         <input type="text" class="form-control" id="keywordsInput" name="keywordsInput"
             [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-KEYWORDS-PLACEHOLDER' | translate" required
             [(ngModel)]="openDataDk.keywordsInput"
             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('keywordsInput'), 'is-valid' : formFailedSubmit && !errorFields.includes('keywordsInput')}">
+    </div>
+</div>
+
+<div class="row mb-2">
+    <div class="form-group mt-3 col-12">
+        <label class="form-label"
+            for="title">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-RESOURCETITLE' | translate}}*</label>
+        <input type="text" class="form-control" id="resourceTitle" ame="resourceTitle"
+            [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-RESOURCETITLE-PLACEHOLDER' | translate" maxlength="120"
+            required [(ngModel)]="openDataDk.resourceTitle"
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('resourceTitle'), 'is-valid' : formFailedSubmit && !errorFields.includes('resourceTitle')}">
     </div>
 </div>
 
