--- a/src/app/device-model/device-model-table/device-model-table.component.html
+++ b/src/app/device-model/device-model-table/device-model-table.component.html
@@ -1,57 +1,54 @@
-<app-loading-spinner *ngIf="isLoadingResults; else showTable">
+<app-loading-spinner [hidden]="!isLoadingResults">
 </app-loading-spinner>
-<ng-template #showTable>
-    <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc">
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="data" matSort matSortActive="name" matSortDirection="asc">
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header matSortDisableClear>
-                    {{ 'DEVICE-MODEL.NAME' | translate }}
-                </th>
-                <td mat-cell *matCellDef="let element">
-                    <a [routerLink]="['device-model-detail', element.id]" routerLinkActive="active"
-                        class="application-link">
-                        {{ element.body.name }}
-                    </a>
-                </td>
-            </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef matSortDisableClear>
+                {{ 'DEVICE-MODEL.NAME' | translate }}
+            </th>
+            <td mat-cell *matCellDef="let element">
+                <a [routerLink]="['device-model-detail', element.id]" routerLinkActive="active"
+                    class="application-link">
+                    {{ element.body.name }}
+                </a>
+            </td>
+        </ng-container>
 
-            <!-- Id Column -->
-            <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef>{{ 'DEVICE-MODEL.ID' | translate }}</th>
-                <td mat-cell *matCellDef="let element">
-                    {{ element.id }}
-                </td>
-            </ng-container>
+        <!-- Id Column -->
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef>{{ 'DEVICE-MODEL.ID' | translate }}</th>
+            <td mat-cell *matCellDef="let element">
+                {{ element.id }}
+            </td>
+        </ng-container>
 
-            <!-- Menu Column -->
-            <ng-container matColumnDef="menu">
-                <th mat-header-cell *matHeaderCellDef></th>
-                <td mat-cell *matCellDef="let element">
-                    <div class="dropdown">
-                        <a href="#" role="button" id="tableRowDropdown-{{ element.id }}"
-                            class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
-                            [attr.aria-label]="'DEVICE-MODEL.SHOW-OPTIONS' | translate"></a>
-                        <ul class="dropdown-menu dropdown-menu--table"
-                            attr.aria-labelledby="tableRowDropdown-{{ element.id }}">
-                            <li class="dropdown-item">
-                                <a [routerLink]="['device-model-edit', element.id]"
-                                    routerLinkActive="active">{{ 'GEN.EDIT' | translate }}</a>
-                            </li>
-                            <li class="dropdown-item">
-                                <a (click)="clickDelete(element)" [routerLink]="">{{ 'GEN.DELETE' | translate }}</a>
-                            </li>
-                        </ul>
-                    </div>
-                </td>
-            </ng-container>
+        <!-- Menu Column -->
+        <ng-container matColumnDef="menu">
+            <th mat-header-cell *matHeaderCellDef></th>
+            <td mat-cell *matCellDef="let element">
+                <div class="dropdown">
+                    <a href="#" role="button" id="tableRowDropdown-{{ element.id }}"
+                        class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+                        [attr.aria-label]="'DEVICE-MODEL.SHOW-OPTIONS' | translate"></a>
+                    <ul class="dropdown-menu dropdown-menu--table"
+                        attr.aria-labelledby="tableRowDropdown-{{ element.id }}">
+                        <li class="dropdown-item">
+                            <a [routerLink]="['device-model-edit', element.id]"
+                                routerLinkActive="active">{{ 'GEN.EDIT' | translate }}</a>
+                        </li>
+                        <li class="dropdown-item">
+                            <a (click)="clickDelete(element)" [routerLink]="">{{ 'GEN.DELETE' | translate }}</a>
+                        </li>
+                    </ul>
+                </div>
+            </td>
+        </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength"
-            showFirstLastButtons>
-        </mat-paginator>
-    </div>
-</ng-template>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
+    </mat-paginator>
+</div>
