--- a/src/app/profiles/device-profiles/device-profiles-list/device-profiles-item/device-profiles-item.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-list/device-profiles-item/device-profiles-item.component.html
@@ -1,7 +1,7 @@
 <div class=" list-group-item mb-1 clearfix" routerLinkActive="active">
     <div class="row">
         <div class="col-9 pull-left d-flex align-items-center">
-            <a [routerLink]="['deviceprofile', deviceProfile.id]" class="container-fluid">
+            <a [routerLink]="['device-profile', deviceProfile.id]" class="container-fluid">
                 {{ deviceProfile.name }}
             </a>
         </div>
