IOT-1108: Add margin to top of field in device profile

--- a/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
@@ -168,7 +168,7 @@
                         min="0" required [(ngModel)]="deviceProfile.classBTimeout">
                 </div>
 
-                <div class="col-xs-12 form-group">
+                <div class="col-xs-12 form-group mt-3">
                     <mat-form-field appearance="outline">
                         <mat-label>{{'PROFILES.DEVICE_PROFILE.PINGSLOTPERIOD' | translate}}</mat-label>
                         <select matNativeControl required name="pingSlotPeriod" [disabled]="!deviceProfile.canEdit"
